--- a/style.css
+++ b/style.css
@@ -1,1 +1,12 @@
-css
+h1 {color: blue;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
+}
+
+body {background-color: bisque;
+
+}
+
+header {border: 3px solid black;
+
+}
